footer gap fix

--- a/css/main.scss
+++ b/css/main.scss
@@ -577,7 +577,7 @@ section {
     text-align: center;
     padding-top: 2em !important;
     padding-bottom: 1em;
-    margin-top: -5px;
+    margin-top: -10px;
 }
 
 .loveletter {
